<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Semester1Activity">

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="564dp"
        android:layout_marginEnd="305dp"
        android:layout_marginRight="305dp"
        android:layout_marginBottom="129dp"
        android:text="Add Data" />

    <Button
        android:id="@+id/button_viewAll"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="269dp"
        android:layout_marginLeft="269dp"
        android:layout_marginTop="564dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="129dp"
        android:text="View All" />


    <TextView
        android:id="@+id/textView_book"
        android:layout_width="94dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:text="Sem"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_sem"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:layout_alignEnd="@+id/button_viewAll"
        android:layout_alignTop="@+id/textView_book"
        android:hint="Semester"
        android:inputType="text|number" />

    <TextView
        android:id="@+id/textView_page"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="68dp"
        android:text="Module1"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/editText_module1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_page"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp"
        android:ems="10"
        android:hint="module4"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView_id"
        android:layout_width="99dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="142dp"
        android:text="Module2"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/editText_module2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_module1"
        android:layout_alignTop="@+id/textView_id"
        android:ems="10"
        android:hint="module2"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="93dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="214dp"
        android:text="Module3"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/editText_module3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_sem"
        android:layout_alignTop="@+id/textView8"
        android:ems="10"
        android:hint="module3"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="84dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="320dp"
        android:layout_marginRight="320dp"
        android:layout_marginBottom="281dp"
        android:text="Module4"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/editText_module4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText_module3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="408dp"
        android:layout_marginBottom="278dp"
        android:ems="10"
        android:hint="module4"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="490dp"
        android:layout_marginBottom="211dp"
        android:text="Module5"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <EditText
        android:id="@+id/editText_module5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="483dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="203dp"
        android:ems="10"
        android:hint="module5"
        android:inputType="text" />


</RelativeLayout>